--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
   </head>
-  <body></body>
+  <body>
+    <main class="main-container">
+      <div class="search-container">
+        <div class="search-box">
+          <input type="text" placeholder="Search location" />
+
+          <button class="search-icon">
+            <i class="las la-search-location"></i>
+          </button>
+        </div>
+
+        <span class="error"></span>
+
+        <ul class="location-list"></ul>
+
+        <div class="load-icon">
+          <i class="las la-circle-notch la-spin"></i>
+        </div>
+      </div>
+
+      <div class="weather-info">
+        <div class="upper-container">
+          <div class="left-box">
+            <h3 class="location"></h3>
+            <p class="day"></p>
+            <p class="time"></p>
+          </div>
+          <div class="right-box">
+            <h4 class="condition"></h4>
+          </div>
+        </div>
+
+        <div class="below-container"></div>
+      </div>
+    </main>
+  </body>
 </html>
