--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <input type="text" placeholder="Search location" />
 
           <button class="search-icon">
-            <i class="las la-search-location"></i>
+            <i class="las la-search-location la-flip-horizontal"></i>
           </button>
         </div>
 
@@ -38,12 +38,20 @@
       <div class="weather-info">
         <div class="upper-container">
           <div class="left-box">
-            <h3 class="location"></h3>
-            <p class="day"></p>
-            <p class="time"></p>
+            <div>
+              <h3 class="location"></h3>
+              <p class="day"></p>
+              <p class="time"></p>
+            </div>
+
+            <div>
+              <p class="temperature"></p>
+            </div>
           </div>
           <div class="right-box">
             <h4 class="condition"></h4>
+            <i class="iconoir-sun-light"></i>
+            <i class="iconoir-half-moon"></i>
           </div>
         </div>
 
