--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,11 @@
           </div>
           <div class="right-box">
             <h4 class="condition"></h4>
-            <i class="iconoir-sun-light"></i>
-            <i class="iconoir-half-moon"></i>
+            <div>
+              <i class="iconoir-sun-light"></i>
+              <i class="iconoir-half-moon"></i>
+              <span class="cycle"></span>
+            </div>
           </div>
         </div>
 
